# gd32f303rct6_linux

./: BOOT_QUICK_FIX.md  BREAKPOINT_NOT_TRIGGERING.md  CLAUDE.md  CMakeLists.txt  DEBUGGING.md  DEBUG_BREAKPOINT_FIXED.md  DEBUG_FIXES.md  DEBUG_QUICK_FIX.md  DEBUG_SETUP_COMPLETE.md  GD32F303.hex  HARDWARE_BOOT_CONFIG.md  HARDWARE_BOOT_QUICK.md  OPENOCD_DEBUG.md  PROGRAM_STARTUP_FIXED.md  QUICK_FIX_APPLIED.md  QUICK_START.md  README.md  RESET_NOT_STARTING.md  check_debug_env.sh  check_hardware_boot.sh  diagnose_reset.sh  diagnose_startup.sh  fix_boot0.sh  gd32f303_flash.cfg  gd32f303_flash_boot_fix.cfg  gd32f303_flash_simple.cfg  gd32f30x_flash.ld  test.cfg  test_minimal.cfg  test_reset_fix.sh  test_reset_fix2.sh
App/: FreeRTOSConfig.h  led.c  led.h  lvgl_demo.c  lvgl_demo.h.bak  main.c
App/delay/: delay.c  delay.h
App/sys/: sys.c  sys.h
App/usart/: usart.c  usart.c.bak  usart.h  usart.h.bak
Drivers/24CXX/: 24cxx.c  24cxx.c.bak  24cxx.h
Drivers/HAL/: hal_gpio.c  hal_gpio.h  hal_led.c  hal_led.h
Drivers/IIC/: myiic.c  myiic.c.bak  myiic.h  myiic.h.bak
Drivers/KEY/: key.c  key.h
Drivers/LCD/: lcd.c  lcd.c.bak  lcd.h  lcd_ex.h  lcdfont.h
Drivers/LED/: led.c  led.h
Drivers/TIMER/: timer.c  timer.h
Drivers/TOUCH/: ctiic.c  ctiic.c.bak  ctiic.h  ctiic.h.bak  ft5206.c  ft5206.c.bak  ft5206.h  gt1151q.c  gt1151q.c.bak  gt1151q.h  touch.c  touch.c.bak  touch.h
Middlewares/LVGL/GUI/lvgl/: lv_conf.h
Middlewares/LVGL/GUI/lvgl/examples/porting/: lv_port_disp_template.c  lv_port_indev_template.c
Middlewares/LVGL/GUI_APP/: lvgl.h
Middlewares/MALLOC/: malloc.c  malloc.h
